# AndroCL

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/linuxdev/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: androcl.cpp  androcl.h  imgprocessor.cpp  imgprocessor.h
app/src/main/java/com/example/linuxdev/myapplication/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/linuxdev/myapplication/: ExampleUnitTest.java
